Tarea limpia y subida :)

--- a/Tarea 2/Pregunta 1/pregunta1.ipynb
+++ b/Tarea 2/Pregunta 1/pregunta1.ipynb
@@ -113,7 +113,7 @@
         "## Test de la solución\n",
         "En las siguientes celdas se realiza el test de prueba entregado en la issues del repositorio del curso.\n",
         "\n",
-        "Primero, se deben instalar las dependencias."
+        "Primero, se deben instalar las dependencias. (Descomentar en caso de hacerse en Colab)"
       ],
       "metadata": {
         "id": "VrYslPFbIXc4"
@@ -122,7 +122,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install pycryptodome"
+        "#!pip install pycryptodome"
       ],
       "metadata": {
         "colab": {
@@ -163,7 +163,7 @@
         "if __name__ == \"__main__\":\n",
         "    compresion = davies_meyer(AES_128, 16, 16)\n",
         "    hash = merkle_damgard(bytearray(b'1234567890123456'), compresion, 16)\n",
-        "\n",
+        "    \n",
         "    s1 = bytearray(b'Este es un mensaje de prueba para la tarea 2')\n",
         "    s2 = bytearray(b'Este es un mensaje de Prueba para la tarea 2')\n",
         "    s3 = bytearray(b'Un mensaje corto')\n",
@@ -191,9 +191,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3znSHrv8IIGc",
-        "outputId": "dbcfceaf-b9bd-4c3e-cd08-8ef6775397c3"
+        "outputId": "4fce51c0-303b-4579-e8be-c3192466843b"
       },
-      "execution_count": 14,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
